--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@ body::before {
 
 /* Create geometric effect with pseudo-elements */
 .brand-main::before {
-    content: 'AYAM';
+    content: 'AAYAM';
     position: absolute;
     left: 0;
     top: 0;
